[package]
name = "pivx-shield-rust"
version = "1.1.6"
authors = ["Duddino <duddino@duddino.com>", "Alessandro Rezzi <alessandrorezzi2000@gmail.com>"]
edition = "2021"
description = "WASM library for interoperation with the PIVX Shield sapling protocol."
repository = "https://github.com/PIVX-Labs/pivx-shield"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
multicore = ["pivx_proofs/multicore", "wasm-bindgen-rayon"]

[dependencies]
tokio = { version = "1.40.0", default-features = false, features = ["sync", "macros"] }
rayon = "1.10.0"
sha256 = { version = "1.5.0", default-features = false }
getrandom = { version = "0.2.15", features = ["js"] }
reqwest = { version = "0.12.0", features = ["blocking"] }
wasm-bindgen = "0.2.93" # Wasm-bindgen makes stdweb fail to compile. See https://github.com/koute/stdweb/issues/427
wasm-bindgen-futures = "0.4.43"
#zcash_client_backend = { path="../librustzcash/zcash_client_backend/" }
#zcash_primitives = { path="../librustzcash/zcash_primitives/", default-features = false, features = ["transparent-inputs", "std"] }
#zcash_proofs = { path="../librustzcash/zcash_proofs/", default-features = false }
pivx_client_backend = { package = "zcash_client_backend", path="../librustzcash/zcash_client_backend/" }
pivx_primitives = { package = "zcash_primitives", path="../librustzcash/zcash_primitives/", default-features = false, features = ["transparent-inputs", "circuits", "std", "non-standard-fees"] }
pivx_proofs = { package = "zcash_proofs", path="../librustzcash/zcash_proofs/", default-features = false }
pivx_protocol = { package = "zcash_protocol", path="../librustzcash/components/zcash_protocol/", default-features = false }
zcash_keys = { path="../librustzcash/zcash_keys/", features = ["unstable"]}
zcash_transparent = { path="../librustzcash/zcash_transparent/"}
sapling = { path = "../librustzcash/sapling-crypto" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.128"
subtle = "2.6.1"
hex = "0.4.3"
incrementalmerkletree = "0.7"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

secp256k1 = "0.29.1"
either = "1.13.0"
wasm-bindgen-rayon = { version = "1.2.1", optional = true }
rand_core = "0.6.4"
atomic_float = "1.1.0"
bellman = {path="../librustzcash/bellman/", features = ["groth16"]}
wasm-bindgen-test = "0.3.13"
[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
#zcash_primitives = { path="../librustzcash/zcash_primitives/", default-features = false, features = ["transparent-inputs", "test-dependencies"] }
wasm-bindgen-test = "0.3.13"
zcash_keys = { path="../librustzcash/zcash_keys/", features = ["unstable"]}
jubjub = "*"

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[patch.crates-io]
orchard = { git = "https://github.com/zcash/orchard.git", rev = "c684e9185a0449efb00428f807d3bf286b5dae03" }
redjubjub = { git = "https://github.com/ZcashFoundation/redjubjub", rev = "eae848c5c14d9c795d000dd9f4c4762d1aee7ee1" }
bellman = {path="../librustzcash/bellman/"}